syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.my.baidu.history.resoure.commit.proto.history.resoure.helloworld";
option java_outer_classname = "HelloWorldProto";

package helloworld;

service MyGreeter {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}